--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
     "@google-cloud/storage": "^7.7.0",
+    "@google/genai": "^1.30.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "fast-csv": "^5.0.0",
     "firebase": "^10.8.0",
@@ -24,12 +25,12 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/node": "^22.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "@types/node": "^22.0.0"
+    "vite": "^4.3.9"
   },
   "browserslist": {
     "production": [
