--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fast-csv": "^5.0.0",
     "firebase": "^10.8.0",
     "lucide-react": "^0.263.1",
+    "nodemailer": "^7.0.12",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
